<resources>
    <string name="app_name">keyboard</string>
    <string name="api_s">API\'s</string>
    <string name="txt_focus">FOCUS</string>
    <string name="input_focus_manager">Input focus manager</string>
    <string name="window_insets_controller">Window insets controller</string>
    <string name="enter_text">Enter text</string>
    <string name="show_keyboard">Show Keyboard</string>
    <string name="hide_keyboard">Hide Keyboard</string>
</resources>