<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnFocusId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btn_text"
            android:text="@string/txt_focus" />

        <Button
            android:id="@+id/btnInputFocusMgrId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btn_text"
            android:text="@string/input_focus_manager" />

        <Button
            android:id="@+id/btnWindowInsetControllerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btn_text"
            android:text="@string/window_insets_controller" />

    </LinearLayout>
</ScrollView>