<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputActionId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_one"/>

    <Button
        android:id="@+id/showKeyboardId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_keyboard" />

    <Button
        android:id="@+id/hideKeyboardId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide_keyboard" />

</LinearLayout>